Moved TestSuite and TestCase to DomainViewModel.  Starting to think about WorkItem Get

--- a/AZDORestApiExplorer.Test/Presentation/Views/TestPlanMain.xaml
+++ b/AZDORestApiExplorer.Test/Presentation/Views/TestPlanMain.xaml
@@ -1,5 +1,6 @@
 <vncmvvm:ViewBase
     x:Class="AZDORestApiExplorer.Test.Presentation.Views.TestPlanMain"
+    x:Name="thisTestPlan"        
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://www.codeplex.com/prism"
@@ -66,6 +67,27 @@
         <!--<dxe:TextEdit Grid.Row="2"
             Text="{Binding Results.SelectedItem.url}"
             TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>-->
+
+        <DockPanel Grid.Row="3" >
+
+            <!--<StackPanel Orientation="Horizontal" Margin="5" DockPanel.Dock="Right" >
+                <Label Content=".NET Runtime: " />
+                <Label Content="{Binding RuntimeVersion}" />
+            </StackPanel>-->
+
+            <StackPanel  Orientation="Horizontal" DockPanel.Dock="Left">
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Label Content="V:" />
+                    <Label Content="{Binding ElementName=thisTestPlan, Path=InstanceCountV}" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Label Content="VM:" />
+
+                    <Label Content="{Binding InstanceCountVM}" />
+                </StackPanel>
+            </StackPanel>
+
+        </DockPanel>
 
     </Grid>
 
