--- a/AZDORestApiExplorer.Test/Presentation/Views/TestSuiteMain.xaml
+++ b/AZDORestApiExplorer.Test/Presentation/Views/TestSuiteMain.xaml
@@ -1,5 +1,6 @@
 <vncmvvm:ViewBase
     x:Class="AZDORestApiExplorer.Test.Presentation.Views.TestSuiteMain"
+    x:Name="thisTestPlan"   
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://www.codeplex.com/prism"
@@ -21,7 +22,7 @@
     xmlns:views="clr-namespace:AZDORestApiExplorer.Test.Presentation.Views"
     xmlns:viewModels="clr-namespace:AZDORestApiExplorer.Test.Presentation.ViewModels"
 
-    prism:ViewModelLocator.AutoWireViewModel="True"
+    prism:ViewModelLocator.AutoWireViewModel="False"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
 >
@@ -39,6 +40,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
@@ -65,6 +67,27 @@
         <!--<dxe:TextEdit Grid.Row="2"
             Text="{Binding Results.SelectedItem.url}"
             TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>-->
+
+        <DockPanel Grid.Row="3" >
+
+            <!--<StackPanel Orientation="Horizontal" Margin="5" DockPanel.Dock="Right" >
+                <Label Content=".NET Runtime: " />
+                <Label Content="{Binding RuntimeVersion}" />
+            </StackPanel>-->
+
+            <StackPanel  Orientation="Horizontal" DockPanel.Dock="Left">
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Label Content="V:" />
+                    <Label Content="{Binding ElementName=thisTestSuite, Path=InstanceCountV}" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="5">
+                    <Label Content="VM:" />
+
+                    <Label Content="{Binding InstanceCountVM}" />
+                </StackPanel>
+            </StackPanel>
+
+        </DockPanel>
 
     </Grid>
 
