--- a/AZDORestApiExplorer/Presentation/Views/ContextMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/ContextMain.xaml
@@ -1,23 +1,12 @@
 ﻿<vncmvvm:ViewBase
     x:Class="AZDORestApiExplorer.Presentation.Views.ContextMain"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:prism="http://www.codeplex.com/prism"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    
-    xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-    xmlns:dxdb="http://schemas.devexpress.com/winfx/2008/xaml/demobase"
-    xmlns:dxdo="http://schemas.devexpress.com/winfx/2008/xaml/docking"
-    xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-    xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
     xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://www.codeplex.com/prism"
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
-    xmlns:local="clr-namespace:AZDORestApiExplorer.Presentation.Views"
-    
-    xmlns:views="clr-namespace:AZDORestApiExplorer.Presentation.Views"
-    xmlns:viewModels="clr-namespace:AZDORestApiExplorer.Presentation.ViewModels"
-
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
 >
@@ -28,189 +17,200 @@
     </d:DesignerProperties.DesignStyle>
 
     <UserControl.Resources>
-
     </UserControl.Resources>
 
     <Grid>
-        <dxlc:LayoutGroup Orientation="Vertical">
+        <!--Put in LayoutControl so can scoll as the list of context items is getting long-->
+        <dxlc:LayoutControl
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            Background="Transparent"
+            Name="lc_Root"
+            Orientation="Vertical">
+            
+            <dxlc:LayoutGroup Orientation="Vertical">
 
-            <dxlc:LayoutGroup Header="Core"
-        	    View="GroupBox" Orientation="Vertical" 
+                <dxlc:LayoutGroup Header="Core"
+        	    View="GroupBox" Orientation="Vertical"
         	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
         	    IsCollapsible="True"  IsCollapsed="False">
 
-                <dxlc:LayoutGroup Header="Process"
-            	    View="GroupBox" Orientation="Vertical" 
+                    <dxlc:LayoutGroup Header="Process"
+            	    View="GroupBox" Orientation="Vertical"
             	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
             	    IsCollapsible="True"  IsCollapsed="False"
                     Background="{StaticResource ProcessColor}">
-                    
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedProcess.name}" />
-                    </dxlc:LayoutItem>
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedProcess.id}" />
-                    </dxlc:LayoutItem>
-                </dxlc:LayoutGroup>
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedProcess.name}" />
+                        </dxlc:LayoutItem>
 
-                <dxlc:LayoutGroup Header="Project"
-            	    View="GroupBox" Orientation="Vertical" 
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedProcess.id}" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
+
+                    <dxlc:LayoutGroup Header="Project"
+            	    View="GroupBox" Orientation="Vertical"
             	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
             	    IsCollapsible="True"  IsCollapsed="False"
                     Background="{StaticResource ProjectColor}">
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedProject.name}" />
-                    </dxlc:LayoutItem>
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedProject.name}" />
+                        </dxlc:LayoutItem>
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedProject.id}" />
-                    </dxlc:LayoutItem>
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedProject.id}" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
 
-                </dxlc:LayoutGroup>
-
-                <dxlc:LayoutGroup Header="Team"
-            	    View="GroupBox" Orientation="Vertical" 
+                    <dxlc:LayoutGroup Header="Team"
+            	    View="GroupBox" Orientation="Vertical"
             	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
             	    IsCollapsible="True"  IsCollapsed="False"
                     Background="{StaticResource TeamColor}">
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedTeam.name}" />
-                    </dxlc:LayoutItem>
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedTeam.name}" />
+                        </dxlc:LayoutItem>
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedTeam.id}" />
-                    </dxlc:LayoutItem>
-
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedTeam.id}" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
                 </dxlc:LayoutGroup>
-                
-            </dxlc:LayoutGroup>
 
-            <dxlc:LayoutGroup Header="Git"
-        	    View="GroupBox" Orientation="Vertical" 
+                <dxlc:LayoutGroup Header="Git"
+        	    View="GroupBox" Orientation="Vertical"
         	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
         	    IsCollapsible="True"  IsCollapsed="False">
 
-                <dxlc:LayoutGroup Header="Repository"
-            	    View="GroupBox" Orientation="Vertical" 
+                    <dxlc:LayoutGroup Header="Repository"
+            	    View="GroupBox" Orientation="Vertical"
             	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
             	    IsCollapsible="True"  IsCollapsed="False"
                     Background="{StaticResource RepositoryColor}">
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedRepository.name}" />
-                    </dxlc:LayoutItem>
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedRepository.name}" />
+                        </dxlc:LayoutItem>
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedRepository.id}" />
-                    </dxlc:LayoutItem>
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedRepository.id}" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
 
-                </dxlc:LayoutGroup>
-
-                <dxlc:LayoutGroup Header="Commit"
-            	    View="GroupBox" Orientation="Vertical" 
+                    <dxlc:LayoutGroup Header="Commit"
+            	    View="GroupBox" Orientation="Vertical"
             	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
             	    IsCollapsible="True"  IsCollapsed="False"
                     Background="{StaticResource CommitColor}">
 
-                    <!--<dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
+                        <!--<dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
                         <TextBlock Text="{Binding Context.SelectedCommit.commitId}" />
                     </dxlc:LayoutItem>-->
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="commitId:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedCommit.commitId}" />
-                    </dxlc:LayoutItem>
-
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="commitId:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedCommit.commitId}" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
                 </dxlc:LayoutGroup>
 
-            </dxlc:LayoutGroup>
+                <dxlc:LayoutGroup Header="Test"
+        	        View="GroupBox" Orientation="Vertical"
+        	        VerticalAlignment="Top" HorizontalAlignment="Stretch"
+        	        IsCollapsible="True"  IsCollapsed="False">
 
-            <dxlc:LayoutGroup Header="Test"
-        	    View="GroupBox" Orientation="Vertical" 
-        	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
-        	    IsCollapsible="True"  IsCollapsed="False">
+                    <dxlc:LayoutGroup Header="TestPlan"
+            	        View="GroupBox" Orientation="Vertical"
+            	        VerticalAlignment="Top" HorizontalAlignment="Stretch"
+            	        IsCollapsible="True"  IsCollapsed="False"
+                        Background="{StaticResource TestColor}">
 
-                <dxlc:LayoutGroup Header="TestPlan"
-            	    View="GroupBox" Orientation="Vertical" 
-            	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
-            	    IsCollapsible="True"  IsCollapsed="False"
-                    Background="{StaticResource TestColor}">
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedTestPlan.name}" />
+                        </dxlc:LayoutItem>
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedTestPlan.name}" />
-                    </dxlc:LayoutItem>
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedTestPlan.id}" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedTestPlan.id}" />
-                    </dxlc:LayoutItem>
+                    <dxlc:LayoutGroup Header="Test Suite"
+            	        View="GroupBox" Orientation="Vertical"
+            	        VerticalAlignment="Top" HorizontalAlignment="Stretch"
+            	        IsCollapsible="True"  IsCollapsed="False"
+                        Background="{StaticResource TestColor}">
 
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedTestSuite.name}" />
+                        </dxlc:LayoutItem>
+
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedTestSuite.id}" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
+
+                    <dxlc:LayoutGroup Header="Test Case"
+            	        View="GroupBox" Orientation="Vertical"
+            	        VerticalAlignment="Top" HorizontalAlignment="Stretch"
+            	        IsCollapsible="True"  IsCollapsed="False"
+                        Background="{StaticResource TestColor}">
+
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedTestCase.workItem.name}" />
+                        </dxlc:LayoutItem>
+
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedTestCase.workItem.id}" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
                 </dxlc:LayoutGroup>
 
-                <dxlc:LayoutGroup Header="Test Suite"
-            	    View="GroupBox" Orientation="Vertical" 
-            	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
-            	    IsCollapsible="True"  IsCollapsed="False"
-                    Background="{StaticResource TestColor}">
+                <dxlc:LayoutGroup Header="Work Item Tracking Process"
+        	        View="GroupBox" Orientation="Vertical"
+        	        VerticalAlignment="Top" HorizontalAlignment="Stretch"
+        	        IsCollapsible="True"  IsCollapsed="False">
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="name:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedTestSuite.name}" />
-                    </dxlc:LayoutItem>
-
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedTestSuite.id}" />
-                    </dxlc:LayoutItem>
-
-                </dxlc:LayoutGroup>
-
-            </dxlc:LayoutGroup>
-
-            <dxlc:LayoutGroup Header="Work Item Tracking Process"
-        	    View="GroupBox" Orientation="Vertical" 
-        	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
-        	    IsCollapsible="True"  IsCollapsed="False">
-
-                <dxlc:LayoutGroup Header="Work Item Type"
-            	    View="GroupBox" Orientation="Vertical" 
+                    <dxlc:LayoutGroup Header="Work Item Type"
+            	    View="GroupBox" Orientation="Vertical"
             	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
             	    IsCollapsible="True"  IsCollapsed="False"
                     Background="{StaticResource WorkItemTypeColor}">
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="referenceName:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedWorkItemTypeWITP.referenceName}" />
-                    </dxlc:LayoutItem>
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="referenceName:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedWorkItemTypeWITP.referenceName}" />
+                        </dxlc:LayoutItem>
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
-                        <TextBlock Text="" />
-                    </dxlc:LayoutItem>
-
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
+                            <TextBlock Text="" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
                 </dxlc:LayoutGroup>
-                
-            </dxlc:LayoutGroup>
 
-            <dxlc:LayoutGroup Header="Work Item Tracking"
-        	    View="GroupBox" Orientation="Vertical" 
+                <dxlc:LayoutGroup Header="Work Item Tracking"
+        	    View="GroupBox" Orientation="Vertical"
         	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
         	    IsCollapsible="True"  IsCollapsed="False"
 >
 
-                <dxlc:LayoutGroup Header="Work Item Type"
-            	    View="GroupBox" Orientation="Vertical" 
+                    <dxlc:LayoutGroup Header="Work Item Type"
+            	    View="GroupBox" Orientation="Vertical"
             	    VerticalAlignment="Top" HorizontalAlignment="Stretch"
             	    IsCollapsible="True"  IsCollapsed="False"
                     Background="{StaticResource WorkItemTypeColor}">
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="referenceName:" LabelPosition="Left">
-                        <TextBlock Text="{Binding Context.SelectedWorkItemTypeWIT.referenceName}" />
-                    </dxlc:LayoutItem>
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="referenceName:" LabelPosition="Left">
+                            <TextBlock Text="{Binding Context.SelectedWorkItemTypeWIT.referenceName}" />
+                        </dxlc:LayoutItem>
 
-                    <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
-                        <TextBlock Text="" />
-                    </dxlc:LayoutItem>
-
+                        <dxlc:LayoutItem HorizontalAlignment="Left" Label="id:" LabelPosition="Left">
+                            <TextBlock Text="" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
                 </dxlc:LayoutGroup>
             </dxlc:LayoutGroup>
-        </dxlc:LayoutGroup>
+        </dxlc:LayoutControl>
     </Grid>
 </vncmvvm:ViewBase>
